# HHData

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: api_connection.py  db_connection.py  db_worker.py  utils.py
